# AEGIS

./: .gitignore  Containerfile  ETHICS.md  HOW_TO_USE.md  LICENSE  README.md  REPORT.md  SECURITY.md  USAGE_WARNINGS.md  install_libraries.py  requirements.txt
aegis_kernel/: Cargo.toml
aegis_kernel/src/: lib.rs
src/: cli.py
src/aegis_core/: analyzer.py  cloaking.py  id_keywords.txt
testing/: __init__.py  baseline_metrics.json  run_audit.py
testing/aegis_testing_temp/Government IDs/: GvezcrVXkAAiy6k_1752201135429_1752201144600_1752201146813.avif  tabrej-alam-permanent-aadhar-center-kushinagar-aadhaar-card-agents-fdjqpuzun9.avif
testing/aegis_testing_temp/ai gen images/AI-generated paintings/: 66c47e28ee26e35883181545_66c47d762975b12fcc9d8b71_1.avif  il_570xN.4900879534_ahv6.avif
testing/aegis_testing_temp/edge cases/: edge_case_creation_of_very_big_tiff_file.py
testing/aegis_testing_temp/potraits/: multiple faces 2.avif  single face 2.avif
testing/test_scripts/: __init__.py  coverage_validator.py  generate_test_assets.py  regression_framework.py  run_benchmarks.py  run_cloaking_tests.py  run_compatibility_tests.py  run_crash_tests.py  run_crypto_review.py  run_functional_tests.py  run_fuzzing.py  run_id_guard_tests.py  run_poisoning_validation.py  run_security_tests.py  run_stress_tests.py  run_watermark_tests.py  rust_safety_audit.py  test_copy_attack.py
