[package]
name = "aegis_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "aegis_kernel"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

[features]
default = []
python = ["dep:pyo3"]
web = ["dep:wasm-bindgen"]
